Add product attributes
