# internal/dto/attribute.go
@@ -1,0 +1,18 @@
+package dto
+
+type CreateAttributeRequest struct {
+	Name string `json:"name"`
+}
+
+type UpdateAttributeRequest struct {
+	Name     *string `json:"name,omitempty"`
+	IsActive *bool   `json:"is_active,omitempty"`
+}
+
+type AttributeResponse struct {
+	ID        int64  `json:"id"`
+	Name      string `json:"name"`
+	IsActive  bool   `json:"is_active"`
+	CreatedAt string `json:"created_at"`
+	UpdatedAt string `json:"updated_at"`
+}
