# internal/models/attribute.go
@@ -1,0 +1,11 @@
+package models
+
+import "time"
+
+type Attribute struct {
+	ID        int64     `json:"id"`
+	Name      string    `json:"name"`
+	IsActive  bool      `json:"is_active"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
